# Data-analysis2

./: .gitignore  CITATION.cff  Portfolio.md  README.md  just_run_it.ipynb  run_headless.sh
.github/workflows/: run-notebook.yml  run_notebook.yml
PF_Feb/: Codebase.md  ETHICS.md  FAIR.md  LAW.md
checklists/: DECIDE_AI_COMPLIANCE.md  FAIR_SUMMARY.md  IBSI_COMPLIANCE.md  TRIPOD_AI_COMPLIANCE.md
data/raw/: MAI3004_lucki_metadata_safe.csv  metaphlan411_data_description.html  metaphlan411_data_description.md
notebooks/: Finalized Models.ipynb  X_test_NN_elite_raw.csv  X_train_NN_elite_raw.csv  data-pipeline.ipynb  data_analysis.ipynb  functions.py  just_run_it.ipynb  predicting_models.ipynb  requirements.txt
notebooks/processed_data/: model_results.json
streamlit/: URL_NAVIGATION.md  app.py  pyproject.toml  requirements.txt  slideshow.py
streamlit/.streamlit/: config.toml
streamlit/page_modules/: __init__.py  conclusions.py  eda.py  fair_compliance.py  interpretability.py  introduction.py  models.py  models_overview.py  preprocessing.py  results.py
streamlit/pages/: eda.py  fair_compliance.py  interpretability.py  introduction.py  models.py  models_overview.py  preprocessing.py  results.py
streamlit/pages/unused/: home.py
streamlit/utils/: data_loader.py  functions.py
