[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome-data-analysis"
version = "1.0.0"
description = "Microbiome data analysis platform for the LucKi cohort using machine learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Data Analysis Team"},
]
keywords = [
    "microbiome",
    "metagenomics",
    "machine-learning",
    "bioinformatics",
    "MetaPhlAn",
    "age-prediction",
    "taxonomic-profiling",
    "compositional-data",
    "CLR-transformation",
    "feature-selection",
    "model-interpretability",
    "LIME",
    "SHAP",
    "Random-Forest",
    "XGBoost",
    "neural-networks"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<=2.3",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "scikit-learn>=1.2.0,<2.0.0",
    "xgboost>=1.7.0,<3.0.0",
    "lightgbm>=3.3.0,<5.0.0",
    "tensorflow>=2.10.0,<3.0.0",
    "lime>=0.2.0,<1.0.0",
    "shap>=0.41.0,<1.0.0",
    "streamlit>=1.28.0",
    "tqdm>=4.65.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "notebook>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/MAI-David/Data-analysis"
Repository = "https://github.com/MAI-David/Data-analysis"
Issues = "https://github.com/MAI-David/Data-analysis/issues"
Changelog = "https://github.com/MAI-David/Data-analysis/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "W0212",  # Access to a protected member
]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]
